Completed all models and tests. I began working on the README.md file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week_16_practical",
+  "name": "project_two_meal_plan",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
